classDiagram
    class AdStruct {
        -char* category
        -char* rubric
        -char* text
        -char* date
        -char* phone
        +AdStruct* next
        +AdStruct* prev
        +AdStruct(const char* cat, const char* rub, const char* txt, const char* dat, const char* phn)
        +~AdStruct()
        +AdStruct(const AdStruct& other)
        +operator=(const AdStruct& other) AdStruct&
        +display() void
        +swapData(AdStruct& other) void
    }

    class AdList {
        -AdStruct* head
        -AdStruct* tail
        -int count
        +AdList()
        +~AdList()
        +addAd(const char* cat, const char* rub, const char* txt, const char* dat, const char* phn) void
        +deleteAd(int logicalNum) void
        +sortAds() void
        +searchByRubric(const char* rubric) void
        +searchByKeyword(const char* keyword) void
        +saveToFile(const char* filename) void
        +loadFromFile(const char* filename) void
        +displayAll() const void
        +isValidDate(const char* date) static bool
    }

    class MenuHandler {
        +displayMenu() const void
        +getChoice() const int
        +handleChoice(AdList& adList, int choice) const void
        -getInput(const char* prompt, size_t size) const char*
    }

    AdList --> AdStruct : contains
    MenuHandler --> AdList : uses
    AdList ..> AdStruct : friend
